--- a/Friday.ERP.Client/wwwroot/index.html
+++ b/Friday.ERP.Client/wwwroot/index.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>Friday</title>
     <base href="/"/>
     <link href="css/Spinner.styles.css" rel="stylesheet"/>
-    <link rel="icon" type="image/png" href="favicon.png"/>
+    <link href="favicon.png" rel="icon" type="image/png"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet"/>
 </head>
@@ -21,7 +21,7 @@
 
 <div id="blazor-error-ui">
     An unhandled error has occurred.
-    <a href="" class="reload">Reload</a>
+    <a class="reload" href="">Reload</a>
     <a class="dismiss">🗙</a>
 </div>
 <script src="_framework/blazor.webassembly.js"></script>
